--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -35,7 +35,7 @@ body {
     text-align: center;
     color: #ffffff; /* Texto verde */
     width: 80%;
-    max-width: 800px;
+    max-width: 900px;
     transition: transform 1s ease-in-out;
 }
 
@@ -64,4 +64,38 @@ button:hover {
     justify-content: space-between; /* Alinha os botões nas extremidades */
     width: 100%; /* Ocupa toda a largura da caixa de texto */
     margin-top: 20px; /* Espaço acima dos botões */
+}
+
+/*INICIO JOGO*/
+/* Estilo da área de cartas */
+.area-cartas {
+    display: flex;
+    justify-content: center;
+    gap: 10px; /* Espaço entre as cartas */
+    margin: 20px 0;
+}
+
+/* Estilo das cartas */
+.carta {
+    background-color: #2c3e50;
+    border: 2px solid #00FA9A;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100px;
+    height: 150px;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.carta:hover {
+    transform: scale(1.1); /* Efeito de zoom ao passar o mouse */
+}
+
+/* Placar */
+#placar {
+    font-size: 1.2em;
+    color: white;
+    margin-bottom: 20px;
 }
